--- a/MTD_Test/App.config
+++ b/MTD_Test/App.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MTD_Test.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
@@ -27,4 +32,23 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <MTD_Test.Properties.Settings>
+      <setting name="ApplicationName" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ApplicationID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ClientID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ClientSecret" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="VRN" serializeAs="String">
+        <value />
+      </setting>
+    </MTD_Test.Properties.Settings>
+  </applicationSettings>
 </configuration>
